(feat): User + Role backend logic, can set username of user. (overloaded commit.)

--- a/partymania/server/tsconfig.json
+++ b/partymania/server/tsconfig.json
@@ -7,9 +7,10 @@
 
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
-    "module": "CommonJS",
-    "target": "esnext",
+    "module": "NodeNext",
+    "target": "ES2020",
     "types": ["node"],
+    "moduleResolution": "NodeNext",
     // For nodejs:
     // "lib": ["esnext"],
     // "types": ["node"],
