--- a/partymania/server/package.json
+++ b/partymania/server/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "express": "^5.2.1",
     "socket.io": "^4.8.1",
+    "tslog": "^4.10.2",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
